adding more detail on index and css:

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <h1>Ready for Code Quiz?</h1>
             </div>
             <!-- Start quiz button  -->
-            <div id="startbutton"><button>Start Quiz</button></div>
-            <div id="highscores"><button>View High Scores</button></div>
+            <div id="firststartbutton"><button id="startbtn">Start Quiz</button></div>
+            
 
         </div>
 
@@ -30,6 +30,8 @@
                 <li>if answer is incorrect, answer will turn red.</li>
                 <li>If answer is incorrect, time will subtract by 3 seconds.</li>
             </div>
+
+            <div id="highscores"><button id="highscorebtn">View High Scores</button></div>
             <!-- continue quit buttons -->
             <div id="buttons">
                 <button id="restart">Continue</button>
