--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         </div>
 
         <!-- Rules -->
-        <div id="rulebox">
+        <div id="rulebox" style="display:none;">
             <div id="rules">
                 <p>QUIZ RULES</p>
                 <li>You will have 60 seconds to finish all quiz.</li>
                 <li>If answer is correct, answer will turn green.</li>
                 <li>if answer is incorrect, answer will turn red.</li>
-                <li>If answer is incorrect, time will subtract by 3 seconds.</li>
+                <li>If answer is incorrect, time will subtract by 10 seconds.</li>
             </div>
 
             <div id="highscores"><button id="highscorebtn">View High Scores</button></div>
@@ -41,11 +41,11 @@
 
 
         <!-- Quiz Box -->
-        <div id="quizbox">
+        <div id="quizbox " style="display:none;">
             <div id="header">
                 <p>Good Luck!</p>
                 <div id="timer">
-                    <div id="countdown">60</div>
+                    <div id="timecount"></div>
                 </div>
             </div>
 
@@ -63,7 +63,7 @@
         </div>
         
         <!-- result -->
-        <div id="resultbox">
+        <div id="resultbox" style="display:none;"">
             <p>You've completed the quiz</p>
             <div id="score">
                 <!-- Score result from js -->
